# openapi/openapi.yaml
@@ -377,9 +377,9 @@ paths:
     $ref: ./paths/ops-applications.saved-view.yaml
   /api/runtime-targets:
     $ref: ./paths/runtime-targets.collection.yaml
-  /api/runtime-targets/saved-views:
+  /api/runtime-target-saved-views:
     $ref: ./paths/runtime-targets.saved-views.yaml
-  /api/runtime-targets/saved-views/{viewId}:
+  /api/runtime-target-saved-views/{viewId}:
     $ref: ./paths/runtime-targets.saved-view.yaml
   /api/runtime-targets/discover-local-docker:
     $ref: ./paths/runtime-targets.discover-local.yaml
